Import of PJFL/HTML-FormWidgets-0.16.382 from CPAN.
gitpan-cpan-distribution: HTML-FormWidgets
gitpan-cpan-version:      0.16.382
gitpan-cpan-path:         PJFL/html-formwidgets/HTML-FormWidgets-0.16.382.tar.gz
gitpan-cpan-author:       PJFL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for HTML::FormWidgets
 
+0.16.381 2012-10-28
+         - Replaced Syntax::Highlight::Perl with PPI::HTML
+         - Textareas can have literal js in the inputs js config group
+         - Can pass scalars as well as hash refs as config to add_literal_js
+
 0.15.377 2012-10-20
          - Harded coded element class to server in Async
          - Re-added setting the outer div width for Cloud
