--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for HTML::FormWidgets
 
+0.17.386 2012-11-07
+         - Updated inc::Bob to 1.6
+         - Passwords can now auto reveal
+
 0.16.381 2012-10-28
          - Replaced Syntax::Highlight::Perl with PPI::HTML
          - Textareas can have literal js in the inputs js config group
