Import of PJFL/HTML-FormWidgets-v0.18.391 from CPAN.
gitpan-cpan-distribution: HTML-FormWidgets
gitpan-cpan-version:      v0.18.391
gitpan-cpan-path:         PJFL/html-formwidgets/HTML-FormWidgets-v0.18.391.tar.gz
gitpan-cpan-author:       PJFL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Name
     HTML::FormWidgets - Create HTML user interface components
 
 Version
-    0.17.$Rev: 389 $
+    0.18.$Rev: 391 $
 
 Synopsis
        use HTML::FormWidgets;
@@ -565,7 +565,7 @@ Bugs and Limitations
     address below. Patches are welcome
 
 Author
-    Peter Flanigan, "<Support at RoxSoft.co.uk>"
+    Peter Flanigan, "<pjfl@cpan.org>"
 
 License and Copyright
     Copyright (c) 2012 Peter Flanigan. All rights reserved
